--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -6,7 +6,12 @@ $gray: #F4F4F4;
 
 body {
   background: $gray; // Using this variable
-  text-align: center;
+}
+
+
+.answer {
+  background-color:$gray;
+  text-align: left;
 }
 
 a {
@@ -16,17 +21,12 @@ a {
     }
   }
 
-container {
-    margin: 0 auto;
-    width: 100%;
-    height: 800px
-}
-
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
 }
 
-form {
-    display: inline-block;
+.ask {
+  // display: inline-block;
+  text-align: center;
 }
