--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,9 +1,14 @@
-<body class='container'>
 
 <h1>Stupid Coaching</h1>
-
-<%= @answer %>
+<br>
+<div>
+<h2> <%= @question %> </h2>
+-You
+</div>
+<br>
+<div class='answer'>
+<h2> <%= @answer %> </h2>
+-Your coach
+</div>
 <br>
 <%= link_to 'Ask a new question', '/ask'%>
-
-</body>
