--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,9 +1,11 @@
-<body class='container'>
-<h1>Stupid Coaching</h1>
-<p>Ask </p>
 
+<h1>Stupid Coaching</h1>
+
+
+<div class='ask'>
+<p>Ask your coach anything</p>
 <form action="/answer">
   <input type="text" name="question">
   <input type="submit" value="Ask!">
 </form>
-</body>
+</div>
